[metadata]
name = networking-hp
version = 2015.2
summary = Neutron ml2 mechanism driver and agents to enable Bandwidth Guarantees using HP Ratekeeper.
description-file =
    README.rst
author = Hewlett-Packard Development Company, L.P.

author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
url =  https://github.com/HewlettPackard/ratekeeper-neutron-ml2-plugin
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
keywords = openstack neutron ratekeeper networking


[files]
packages =
    networking_hp
data_files =
    etc/neutron =
        etc/neutron/plugins/ml2/ml2_conf_ratekeeper.ini
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/ratekeeper.filters

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    neutron-hp-ratekeeper-agent = neutron.cmd.eventlet.plugins.rk_neutron_agent:main
    neutron-hp-ratekeeper-db-manage = networking_hp.plugins.ml2.drivers.ratekeeper.db.migration.cli:main
neutron.ml2.mechanism_drivers =
    hp_ratekeeper = neutron.plugins.ml2.drivers.hp.ratekeeper.mech_hp_ratekeeper:HpRatekeeperMechanismDriver
neutron.ml2.extension_drivers =
    hp_ratekeeper_ext = networking_hp.plugins.ml2.drivers.ratekeeper.ml2.ratekeeper_ext_driver:HpRatekeeperExtensionDriver



[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_hp/locale/networking-hp.pot

[compile_catalog]
directory = networking_hp/locale
domain = networking-hp

[update_catalog]
domain = networking-hp
output_dir = networking_hp/locale
input_file = networking_hp/locale/networking-hp.pot

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
